--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,10 @@
-html {
+:root {
+  --blue: blue;
+  --dark-purple: #87209e;
+
+  --imp-text-color: black;
+}
+/* html {
   --section-background-color: linear-gradient(
     to bottom left,
     rgba(17, 16, 16, 0.582),
@@ -11,8 +17,7 @@ html {
     rgba(12, 10, 22, 0.863)
   );
 
-  --imp-text-color: #c770f0;
-}
+} */
 
 .purple {
   color: var(--imp-text-color) !important;
@@ -257,15 +262,14 @@ button:focus {
 .home-section {
   position: relative;
   z-index: -1;
+
   background-image: var(--image-gradient), url(./Assets/home-bg.jpg);
   background-position: top center;
   background-repeat: no-repeat;
-  padding-bottom: 30px !important;
-  padding-top: 30px !important;
 }
 
 .home-content {
-  padding: 9rem 0 2rem !important;
+  padding: 5rem 0 2rem !important;
   color: whitesmoke;
   text-align: left;
 }
@@ -317,15 +321,11 @@ button:focus {
   }
 }
 
-.home-about-section {
-  position: relative;
-  padding-bottom: 70px !important;
-  padding-top: 70px !important;
-}
+/* .home-about-section {
+} */
 
 .home-about-description {
   color: white !important;
-  padding-top: 100px !important;
   padding-bottom: 20px !important;
   text-align: center;
 }
@@ -353,17 +353,10 @@ button:focus {
 .home-social-icons {
   position: relative !important;
   display: inline-block !important;
-  width: 40px !important;
-  height: 40px !important;
-  text-align: center !important;
-  font-size: 1.2em !important;
-  line-height: 2em !important;
-  background: rgba(255, 255, 255, 0.972) !important;
-  border-radius: 50% !important;
-  transition: 0.5s !important;
+  font-size: 2rem;
 }
 
-.home-social-icons::before {
+/* .home-social-icons::before {
   content: "";
   position: absolute;
   top: 0;
@@ -375,17 +368,15 @@ button:focus {
   transition: 0.5s;
   transform: scale(0.9);
   z-index: -1;
-}
+} */
 
-.home-social-icons:hover::before {
+/* .home-social-icons:hover::before {
   transform: scale(1.1);
   box-shadow: 0 0 15px #801f95;
-}
+} */
 
 .home-social-icons:hover {
-  color: #87209e;
-  box-shadow: 0 0 5px #87209e;
-  text-shadow: 0 0 2px #87209e;
+  color: var(--dark-purple) !important;
 }
 
 .social-icons {
@@ -395,7 +386,7 @@ button:focus {
 }
 
 .icon-colour {
-  color: #700c86 !important;
+  color: white !important;
 }
 
 /* --------- */
@@ -433,9 +424,8 @@ button:focus {
   margin-bottom: 0.5em !important;
 }
 .footer-icons {
-  margin-top: 0.5em !important;
-  margin-bottom: 0.5em !important;
-  padding: 0 !important;
+  display: flex;
+  margin: auto !important;
 }
 
 .blockquote-footer {
