--- a/src/style.css
+++ b/src/style.css
@@ -254,6 +254,7 @@ button:focus {
   background-size: cover !important;
   width: 100%;
   height: 100%;
+  z-index: -1;
 }
 
 .home-header {
@@ -262,7 +263,7 @@ button:focus {
 
 .home-section {
   position: relative;
-  z-index: -1;
+  z-index: 1;
 
   background-image: var(--image-gradient), url(./Assets/home-bg.jpg);
   background-position: top center;
@@ -323,8 +324,9 @@ button:focus {
   }
 }
 
-/* .home-about-section {
-} */
+.home-about-section {
+  z-index: 1;
+}
 
 .home-about-description {
   color: white !important;
@@ -399,14 +401,15 @@ button:focus {
   bottom: 0 !important;
   padding-top: 10px !important;
   padding-bottom: 8px !important ;
+  z-index: 100;
 }
 .footer-copywright {
   text-align: center !important;
 }
 
 .footer-body {
-  z-index: 1;
   text-align: center !important;
+  z-index: 100;
 }
 
 @media (max-width: 767px) {
