--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,10 @@
 
 } */
 
+.black {
+  color: black;
+}
+
 .purple {
   color: var(--imp-text-color) !important;
 }
@@ -38,7 +42,7 @@ button:focus {
   width: 100%;
   height: 100%;
   z-index: 999999;
-  background-color: #0c0513;
+  background-color: #0d47a1;
   background-image: url(./Assets/pre.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -82,7 +86,7 @@ button:focus {
 /* Navbar Section  */
 /* --------- */
 .sticky {
-  background-color: #1b1a2ea9 !important;
+  /* background-color: #1b1a2ea9 !important; */
   transition: all 0.3s ease-out 0s !important;
   box-shadow: 0px 10px 10px 0px rgba(9, 5, 29, 0.171) !important;
   backdrop-filter: blur(15px) !important;
@@ -103,7 +107,7 @@ button:focus {
 
 .navbar-toggler span {
   display: block !important;
-  background-color: #be50f4 !important;
+  background-color: #0d47a1 !important;
   height: 4px !important;
   width: 27px !important;
   margin-top: 5px !important;
@@ -315,7 +319,8 @@ button:focus {
 
 .myAvtar {
   justify-content: center !important;
-  padding-top: 9em !important;
+  /* padding-top: 0em !important; */
+  padding-bottom: 2rem;
 }
 
 @media (max-width: 767px) {
@@ -398,11 +403,11 @@ button:focus {
 /* Footer */
 /* --------- */
 .footer {
-  background-color: rgb(10, 4, 22);
+  background-color: transparent;
   bottom: 0 !important;
   padding-top: 10px !important;
   padding-bottom: 8px !important ;
-  z-index: 100;
+  backdrop-filter: blur(2.5px) !important;
 }
 .footer-copywright {
   text-align: center !important;
@@ -431,7 +436,7 @@ button:focus {
 }
 .footer-icons {
   display: flex;
-  margin: auto !important;
+  /* margin: auto !important; */
 }
 
 .blockquote-footer {
