--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,16 @@ body {
   font-family: "Sora", sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     180deg,
     rgba(13, 71, 161, 1) 0%,
     rgba(13, 71, 161, 1) 30%,
     rgba(0, 0, 0, 1) 40%,
     rgba(0, 0, 0, 1) 100%
+  ); */
+  background-image: linear-gradient(
+    to right,
+    rgba(13, 71, 161, 1),
+    rgba(13, 71, 161, 1)
   );
 }
