--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@
   --black: black;
   --imp-text-color: rgb(29, 168, 255);
   --typewriter-gradient: linear-gradient(to right, #40ee2d, #fe3384);
+  font-size: medium;
 }
 /* html {
   --section-background-color: linear-gradient(
@@ -89,7 +90,7 @@ button:focus {
   /* background-color: #1b1a2ea9 !important; */
   transition: all 0.3s ease-out 0s !important;
   box-shadow: 0px 10px 10px 0px rgba(9, 5, 29, 0.171) !important;
-  backdrop-filter: blur(15px) !important;
+  backdrop-filter: blur(10px) !important;
 }
 
 .navbar {
@@ -97,6 +98,7 @@ button:focus {
   transition: all 0.3s ease-out 0s !important;
   padding: 0.3rem 2rem !important;
   font-size: 1.2rem !important;
+  background-color: transparent;
 }
 
 .navbar-toggler {
@@ -107,7 +109,7 @@ button:focus {
 
 .navbar-toggler span {
   display: block !important;
-  background-color: #0d47a1 !important;
+  background-color: #000000 !important;
   height: 4px !important;
   width: 27px !important;
   margin-top: 5px !important;
@@ -154,7 +156,9 @@ button:focus {
   .navbar {
     padding: 1rem 2rem !important;
     font-size: 1.4rem !important;
-    background-color: #181a27 !important;
+    background-color: transparent !important;
+    backdrop-filter: blur(10px) !important;
+    box-shadow: 0px 10px 10px 0px rgba(9, 5, 29, 0.171) !important;
   }
   .navbar-nav .nav-item a::after {
     display: none !important;
@@ -268,10 +272,8 @@ button:focus {
 .home-section {
   position: relative;
   z-index: 1;
-
-  /* background-image: var(--image-gradient), url(./Assets/home-bg.jpg);
-  background-position: top center;
-  background-repeat: no-repeat; */
+  padding-bottom: 0px;
+  margin-bottom: 0px;
 }
 
 .home-content {
@@ -279,6 +281,7 @@ button:focus {
   padding-bottom: 0px;
   color: whitesmoke;
   text-align: left;
+  margin-bottom: 0px;
 }
 
 .heading {
@@ -308,7 +311,7 @@ button:focus {
 
 @media (max-width: 767px) {
   .Typewriter__wrapper {
-    font-size: 1.4em !important;
+    font-size: 1.5em !important;
     font-weight: 500 !important;
     position: absolute !important;
   }
@@ -328,65 +331,19 @@ button:focus {
     padding-top: 2em !important;
     padding-bottom: 2em !important;
   }
+  .myAvtar h2 {
+    text-align: center !important;
+  }
 }
-
-/* .home-about-section {
-  z-index: 1;
-} */
 
 .home-about-description {
   color: white !important;
-  padding-bottom: 20px !important;
+  padding-bottom: 1rem !important;
   text-align: center;
 }
 
 .home-about-body {
-  padding-top: 50px;
-  font-size: 1.2em !important;
   text-align: left;
-}
-
-.home-about-social {
-  text-align: center !important;
-  padding-top: 25px;
-  color: white !important;
-}
-
-.home-about-social-links {
-  justify-content: center !important;
-  padding-top: 15px !important;
-  display: inline-block !important;
-  position: relative !important;
-  padding-inline-start: 0 !important;
-}
-
-.home-social-icons {
-  position: relative !important;
-  display: inline-block !important;
-  font-size: 2rem;
-}
-
-/* .home-social-icons::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background: #68187a;
-  transition: 0.5s;
-  transform: scale(0.9);
-  z-index: -1;
-} */
-
-/* .home-social-icons:hover::before {
-  transform: scale(1.1);
-  box-shadow: 0 0 15px #801f95;
-} */
-
-.home-social-icons:hover {
-  color: var(--dark-purple) !important;
 }
 
 .social-icons {
@@ -399,6 +356,14 @@ button:focus {
   color: white !important;
 }
 
+.Home-social-icons {
+  margin-top: 2rem;
+}
+@media (max-width: 767px) {
+  .Home-social-icons {
+    margin-top: 4rem;
+  }
+}
 /* --------- */
 /* Footer */
 /* --------- */
@@ -407,49 +372,45 @@ button:focus {
   bottom: 0 !important;
   padding-top: 10px !important;
   padding-bottom: 8px !important ;
-  backdrop-filter: blur(2.5px) !important;
-}
-.footer-copywright {
-  text-align: center !important;
+  backdrop-filter: blur(10px) !important;
 }
 
-.footer-body {
-  text-align: center !important;
-  z-index: 100;
+.footer-blur {
+  box-shadow: 0px 10px 10px 0px rgba(9, 5, 29, 0.171) !important;
+  backdrop-filter: blur(10px) !important;
+  background-color: transparent;
 }
 
 @media (max-width: 767px) {
-  .footer-copywright {
-    text-align: center !important;
+  .footer h3 {
+    justify-content: center !important;
   }
 
-  .footer-body {
-    text-align: center !important;
+  .footer-social-icons {
+    justify-content: center !important;
   }
 }
 
 .footer h3 {
-  font-size: 1em;
+  font-size: 1.25em;
   color: white !important;
   margin-top: 0.5em !important;
   margin-bottom: 0.5em !important;
 }
 .footer-icons {
   display: flex;
-  /* margin: auto !important; */
+  margin-left: 0px !important;
+  padding-left: 0px;
 }
 
-.blockquote-footer {
-  color: #a588c0 !important;
-}
 /* --------- */
 /* Projects */
 /* --------- */
 .project-section {
   position: relative !important;
-  padding-top: 150px !important;
-  padding-bottom: 30px !important;
-  background-image: var(--section-background-color) !important;
+  /* padding-top: 150px !important; */
+  /* padding-bottom: 30px !important; */
+  /* background-image: var(--section-background-color) !important; */
 }
 
 .project-card {
@@ -605,87 +566,21 @@ button:focus {
 
 .resume-section {
   position: relative !important;
-  padding-top: 110px !important;
-  padding-bottom: 30px !important;
-  background-image: var(--section-background-color) !important;
-  color: white !important;
+  padding-top: 5rem !important;
+  padding-bottom: 10px !important;
 }
 
-.resume {
-  padding-top: 50px;
-  padding-bottom: 50px;
-  justify-content: center;
+#iframe {
+  margin-top: 1rem;
 }
-
-.resume-left {
-  padding-right: 80px !important;
-}
-
-.resume-right {
-  padding-left: 80px !important;
-}
-
 @media (max-width: 767px) {
-  .resume-left {
-    padding-right: 15px !important;
-    padding-left: 15px !important;
+  #iframe {
+    width: auto;
   }
-
-  .resume-right {
-    padding-right: 15px !important;
-    padding-left: 15px !important;
+  .resume-section {
+    margin-top: 3rem;
   }
 }
-.resume .resume-title {
-  font-size: 2em;
-  font-weight: 700;
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.resume .resume-item {
-  padding: 0 0 10px 25px;
-  margin-top: -2px;
-  border-left: 2px solid #8a49a8;
-  position: relative;
-}
-
-.resume .resume-item .resume-title {
-  line-height: 18px;
-  font-size: 0.9em;
-  background: #5234795d;
-  padding: 8px 15px;
-  display: inline-block;
-  font-weight: 600;
-  margin-bottom: 10px;
-}
-
-.resume .resume-item ul {
-  padding-left: 20px;
-  text-align: justify;
-}
-
-.resume .resume-item ul li {
-  padding-bottom: 10px;
-  list-style: none;
-}
-
-.resume .resume-item:last-child {
-  padding-bottom: 0;
-}
-
-.resume .resume-item::before {
-  content: "";
-  position: absolute;
-  width: 16px;
-  height: 16px;
-  border-radius: 50px;
-  left: -9px;
-  top: 0;
-  background: #fff;
-  border: 2px solid #8a49a8;
-}
-
 .like-item {
   padding-top: 10px !important;
   font-size: 1.1em !important;
