--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700;800&display=swap");
+body {
+  font-family: "Sora", sans-serif !important;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(
+    to right,
+    rgba(13, 71, 161, 1),
+    rgba(13, 71, 161, 1)
+  );
+}
 :root {
   --blue: #0d47a1;
   --dark-purple: #87209e;
   --black: black;
   --imp-text-color: rgb(29, 168, 255);
-  --typewriter-gradient: linear-gradient(to right, #40ee2d, #fe3384);
   font-size: medium;
 }
 /* html {
@@ -368,17 +378,7 @@ button:focus {
 /* Footer */
 /* --------- */
 .footer {
-  background-color: transparent;
-  bottom: 0 !important;
-  padding-top: 10px !important;
-  padding-bottom: 8px !important ;
-  backdrop-filter: blur(10px) !important;
-}
-
-.footer-blur {
-  box-shadow: 0px 10px 10px 0px rgba(9, 5, 29, 0.171) !important;
-  backdrop-filter: blur(10px) !important;
-  background-color: transparent;
+  z-index: 1;
 }
 
 @media (max-width: 767px) {
@@ -397,10 +397,20 @@ button:focus {
   margin-top: 0.5em !important;
   margin-bottom: 0.5em !important;
 }
-.footer-icons {
-  display: flex;
-  margin-left: 0px !important;
-  padding-left: 0px;
+/* BOX SHADOWS */
+
+.box-shadow {
+  box-shadow: 3px 3px 3px 3px black;
+  padding: 6px;
+  border-radius: 15px;
+  transition: all 0.25s ease 0s !important;
+  margin-bottom: 1rem;
+}
+.box-shadow:hover {
+  box-shadow: 5px 5px 5px 5px black;
+  border-radius: 15px;
+  transform: scale(1.02) !important;
+  overflow: hidden !important;
 }
 
 /* --------- */
@@ -408,98 +418,50 @@ button:focus {
 /* --------- */
 .project-section {
   position: relative !important;
+  padding-left: 0px;
   /* padding-top: 150px !important; */
+  margin-left: 0px;
   /* padding-bottom: 30px !important; */
   /* background-image: var(--section-background-color) !important; */
 }
 
 .project-card {
-  padding-top: 50px !important;
-  padding-bottom: 50px !important;
-  padding-left: 25px !important;
-  padding-right: 25px !important;
-  height: auto !important;
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
+  padding-left: 0.75rem !important;
+  padding-right: 0.75px !important;
 }
 
 .project-card-view {
-  box-shadow: 0 4px 5px 3px rgba(119, 53, 136, 0.459) !important;
+  box-shadow: 2px 2px 2px 2px black !important;
+  position: relative;
   color: white !important;
   background-color: transparent !important;
-  opacity: 0.9 !important;
-  transition: all 0.5s ease 0s !important;
-  height: 100% !important;
+  opacity: 1 !important;
+  transition: all 0.25s ease 0s !important;
 }
 .project-card-view:hover {
-  transform: scale(1.02) !important;
+  transform: scale(1.03) !important;
   overflow: hidden !important;
-  box-shadow: 0 4px 4px 5px rgba(129, 72, 144, 0.561) !important;
-}
-
-.blog-card {
-  padding-top: 50px !important;
-  padding-bottom: 50px !important;
-  padding-left: 25px !important;
-  padding-right: 25px !important;
-  height: auto !important;
-}
-
-.blog-card-view {
-  background-color: transparent !important;
-  box-shadow: 0 3px 3px 2px rgba(145, 77, 161, 0.459) !important;
-  color: white !important;
-  transition: all 0.5s ease 0s !important;
-  height: 100% !important;
-}
-
-.blog-link {
-  color: white !important;
-  text-decoration: none !important;
-}
-
-.blog-link:hover {
-  cursor: pointer !important;
-}
-
-.blog-card-view:hover {
-  transform: scale(1.02) !important;
-  overflow: hidden !important;
-  box-shadow: 0 3px 3px 5px rgba(155, 88, 173, 0.65) !important;
+  box-shadow: 4px 4px 4px 4px black !important;
 }
 
 .card-img-top {
-  padding: 20px !important;
-  opacity: 0.8 !important;
-  border-radius: 10px !important;
+  padding: 10px !important;
+  opacity: 1 !important;
+  border-radius: 15px !important;
 }
 
-.blog-img {
-  padding: 0px !important;
-  opacity: 0.8 !important;
-  border-radius: 0px !important;
+.project-heading {
+  font-weight: 800 !important;
+  padding-top: 0px !important;
 }
 
-.btn-primary {
-  color: #fff !important;
-  background-color: #623686 !important;
-  border-color: #623686 !important;
-}
-
-.btn-primary:hover {
-  color: #fff !important;
-  background-color: #6d20c5d7 !important;
-  border-color: #6d20c5d7 !important;
-}
+/* GENERAL BUTTONS */
 .btn:focus {
   outline: none !important;
   box-shadow: none !important;
 }
-.project-heading {
-  color: white !important;
-  font-size: 2.3em !important;
-  font-weight: 500 !important;
-  padding-top: 10px !important;
-}
-
 /* --------- */
 /* About */
 /* --------- */
