--- a/src/style.css
+++ b/src/style.css
@@ -3,11 +3,7 @@ body {
   font-family: "Sora", sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(
-    to right,
-    rgba(13, 71, 161, 1),
-    rgba(13, 71, 161, 1)
-  );
+  background-image: linear-gradient(to right, #1565c0, #1565c0);
   margin: 0px;
 }
 .App {
@@ -17,9 +13,35 @@ body {
   --blue: #0d47a1;
   --dark-purple: #87209e;
   --black: black;
+  --white: white;
   --imp-text-color: rgb(29, 168, 255);
-  font-size: medium;
+  --secondary-color: #000;
+  font-size: 16px;
 }
+
+#about,
+#experience,
+#awards,
+#skills,
+#projects {
+  text-align: left;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  color: white;
+}
+
+.secondary-color {
+  color: var(--secondary-color);
+}
+.secondary-color-heading {
+  color: var(--secondary-color);
+  font-weight: 800;
+}
+
 .black {
   color: black;
   font-weight: 800;
@@ -27,10 +49,6 @@ body {
 
 .purple {
   color: var(--imp-text-color) !important;
-}
-
-button:focus {
-  box-shadow: none !important;
 }
 
 /* --------- */
@@ -177,8 +195,8 @@ button:focus {
     /* padding-left: 0px !important; */
     /* font-size: 4rem; */
     font-weight: 900;
-    color: #ffdf2b !important;
-    opacity: 0.75;
+    color: var(--secondary-color) !important;
+    /* opacity: 0.75; */
   }
 }
 
@@ -234,6 +252,9 @@ button:focus {
   animation-iteration-count: infinite; /* Never stop waving :) */
   transform-origin: 70% 70%; /* Pivot around the bottom-left palm */
   display: inline-block;
+}
+.wave img {
+  width: 75%;
 }
 
 @keyframes wave-animation {
@@ -326,7 +347,7 @@ button:focus {
   text-align: left;
 }
 .main-name {
-  color: var(--black);
+  color: var(--secondary-color);
   font-size: 2.8rem;
   font-weight: 800;
 }
@@ -389,14 +410,17 @@ button:focus {
   display: flex !important;
   padding-left: 0px;
 }
-.single-icon {
+.single-icon-list {
   list-style: none;
   margin-inline: 1rem;
   margin-left: 0px;
 }
 
-.icon-colour {
-  color: white !important;
+.single-icon {
+  color: var(--white);
+}
+.single-icon:hover {
+  color: var(--black);
 }
 
 .Home-social-icons {
@@ -512,9 +536,24 @@ button:focus {
 }
 
 /* GENERAL BUTTONS */
-.btn:focus {
+.btn {
   outline: none !important;
   box-shadow: none !important;
+  /* border-width: 3px !important; */
+  font-size: 0.8rem !important;
+  border-color: var(--secondary-color) !important;
+  background-color: transparent !important;
+  color: var(--white) !important;
+  font-weight: 600 !important;
+  box-shadow: 1px 1px 1px 1px black !important;
+}
+.btn:hover {
+  box-shadow: 2px 2px 2px 2px black !important;
+  transform: scale(1.05) !important;
+  transition: all 0.25s ease 0s !important;
+
+  /* background-color: var(--black) !important; */
+  color: var(--white) !important;
 }
 /* --------- */
 /* About */
